--- a/src/app/admin/admin.component.html
+++ b/src/app/admin/admin.component.html
@@ -18,7 +18,7 @@
           </tr>
         </thead>
         <tbody>
-          <tr *ngFor="let command of neonList; let i = index" (click)="goToNeonDetail(command)">
+          <tr *ngFor="let command of neonList; let i = index" >
             <td data-column="Yencli"><div class="table-position-circle">{{i+1}}</div>{{command.email}}</td>
             <td data-column="Type">{{command.type}}</td>
             <td data-column="Dessin technique">{{command.text}}</td>
@@ -27,6 +27,7 @@
             <td data-column="Etat">{{command.state}}</td>
             <td data-column="Prix">{{command.price}}</td>
             <button style="padding-right: 30px; padding-left: 30px; margin-top: 5px;" class="next-btn">Acceder</button>
+            <input *ngIf="command.state === 'created'" (change)="importDT($event, command)" type="file"   class="basic-input"/>
           </tr>
 
 
@@ -34,3 +35,10 @@
       </table>
     </div>
   </div>
+
+  <div *ngIf="loading" class="blendContainer">
+    <svg id="progress-circle" class="animation-circle" viewBox="0 0 50 50">
+            <!--<circle cx="25" cy="25" r="20" fill="none" stroke="#e2ecf8" stroke-width="7" />-->
+            <circle stroke="#f4cc20" class="path" cx="25" cy="25" r="20" fill="none" stroke-width="8.3"></circle>
+          </svg>
+</div>
