--- a/src/app/neon-list/neon-list.component.html
+++ b/src/app/neon-list/neon-list.component.html
@@ -18,9 +18,9 @@
             </tr>
           </thead>
           <tbody>
-            <tr *ngFor="let command of neonList; let i = index" (click)="goToNeonDetail(command)">
+            <tr *ngFor="let command of neonList; let i = index" (click)="goToNeonDetail(command)"  >
               <td data-column="Vos dessins techniques"><div class="table-position-circle">{{i+1}}</div>{{command.text}}</td>
-              <td data-column="Etat">Traitement en cours</td>
+              <td data-column="Etat">{{command.state}}</td>
             </tr>
 
   
@@ -354,7 +354,9 @@
   </div>
 
 </div>
-
 <div *ngIf="loading" class="blendContainer">
-  
-  </div>
+  <svg id="progress-circle" class="animation-circle" viewBox="0 0 50 50">
+          <!--<circle cx="25" cy="25" r="20" fill="none" stroke="#e2ecf8" stroke-width="7" />-->
+          <circle stroke="#f4cc20" class="path" cx="25" cy="25" r="20" fill="none" stroke-width="8.3"></circle>
+        </svg>
+</div>
