--- a/src/styles.scss
+++ b/src/styles.scss
@@ -11,6 +11,52 @@
   src:  url('./assets/fonts/Nunito-Black.ttf')  format('truetype');
 }
 
+
+.animation-circle {
+  animation: rotate 2s linear infinite;
+  & .path {
+    animation: dash 1.5s ease-in-out infinite;
+  }
+}
+
+.blendContainer {
+  justify-items: center;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+
+#progress-circle {
+  height: 78px;
+  & .path {
+    stroke-linecap: round;
+  }
+}
+
+@keyframes rotate {
+  100% {
+    transform: rotate(360deg);
+  }
+}
+
+@keyframes dash {
+  0% {
+    stroke-dasharray: 1, 150;
+    stroke-dashoffset: 0;
+  }
+  50% {
+    stroke-dasharray: 90, 150;
+    stroke-dashoffset: -35;
+  }
+  100% {
+    stroke-dasharray: 90, 150;
+    stroke-dashoffset: -124;
+  }
+}
+
+
+
 .next-btn {
         // min-width: 140px;
         border-radius: 25px;
