--- a/src/app/neon-form/neon-form.component.scss
+++ b/src/app/neon-form/neon-form.component.scss
@@ -12,6 +12,11 @@
     src:  url('../.././assets/fonts/Nunito-Black.ttf')  format('truetype');
   }
 
+  .errorMessage {
+    color: #F44336;
+    font-family: Mukta-Bold;
+    text-align: center;
+}
 
 
 // #000b31
