--- a/src/app/neon-list/neon-list.component.scss
+++ b/src/app/neon-list/neon-list.component.scss
@@ -327,6 +327,11 @@ box-shadow: 5pxs 5px 30px 7px rgba(0,0,0,0.25), -5px -5px 30px 7px rgba(0,0,0,0.
   transition: 0.4s;
 }
 */
+.errorMessage {
+  color: #F44336;
+  font-family: Mukta-Bold;
+  text-align: center;
+}
 
 .neon-canvas-cont {
     display: flex;
@@ -334,15 +339,17 @@ box-shadow: 5pxs 5px 30px 7px rgba(0,0,0,0.25), -5px -5px 30px 7px rgba(0,0,0,0.
     z-index: 10;
     border: 1px solid #000b31;
     padding: 0;
+    background-color: white;
 }
 
 .neon-canvas {
-    height: 85%;
-
-    background-image: url('../../assets/outer-space-neon.jpg');
+    // height: 85%;
+    height: 100%;
+    width: 100%;
+    // background-image: url('../../assets/outer-space-neon.jpg');
     background-repeat:no-repeat;
     background-position:center;
-    background-size: cover;
+    background-size: contain;
 }
 
 .neon-bar {
