--- a/src/app/neon-list/neon-list.component.html
+++ b/src/app/neon-list/neon-list.component.html
@@ -87,7 +87,7 @@
 </div>
 
 
-<div *ngIf="neonSelected  && !commandMode" class='ec-bigbox-detail'>
+<div *ngIf="neonSelected  && !commandMode " class='ec-bigbox-detail'>
     <button  style="margin-bottom: 1.5%;" class="prev-btn" (click)="neonSelected = null">Précédent</button>
 
   <h2  style="margin-bottom: 3%;">Néon LED "{{neonSelected.text}}"</h2>
@@ -241,7 +241,7 @@
 
 
 <div class="ec-bigbox" *ngIf="commandMode && neonSelected">
-    <button  style="margin-bottom: 1.5%;" class="prev-btn" (click)="openCommand();">Précédent</button>
+    <button  style="margin-bottom: 1.5%;" class="prev-btn" (click)="previous();">Précédent</button>
 
   <div class="row commandMainCont">
     <div class="col-6 command-form-cont">
@@ -361,6 +361,10 @@
     </div>
   </div>
 
+</div>
+
+<div>
+  
 </div>
 <div *ngIf="loading" class="blendContainer">
   <svg id="progress-circle" class="animation-circle" viewBox="0 0 50 50">
